--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <p>Here's a picture of a cute cat:</p>
 
-<img src="https://placekitten.com/200/300" alt="A cute kitten">
+<img src="ggggbjn.jfif" alt="A cute kitten">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
