--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
-<p>Here's a picture of a cute cat:</p>
+<p>Here's a picture of spiritual car:</p>
 
 <img src="ggggbjn.jfif" alt="A spiritual car">
 
