--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header>
 
-<h1>MDERICKO CAR WORLD</h1>
+<h1>GUSHESHE GALORE 325i</h1>
 
 </header>
 
@@ -25,10 +25,11 @@
 
 <p>This is a simple webpage hosted on GitHub Pages.</p>
 
-<p>Here's a picture of spiritual car:</p>
+<p>BMW 325i white :</p>
 
 <img src="ggggbjn.jfif" alt="A spiritual car">
-
+  <p>BMW 325i black:</p>
+<img src="
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
