--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <img src="ggggbjn.jfif" alt="A spiritual car">
   <p>BMW 325i black:</p>
-<img src="
+<img src="OIP.jvhbhbh.jpg" alt= "African beauty">
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
