--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body background="STOCKOLOKO.jpg">
 
 <header>
 
@@ -38,7 +38,7 @@
 
 <footer>
 
-<p>&copy; 2025 Your Name</p>
+<p>&copy; 2025 Derick Tebatso Kgosi Motlhabani</p>
 
 </footer>
 
