--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 
 <p>BMW 325i white :</p>
 
-<img src="ggggbjn.jfif" alt="A spiritual car">
+<img src="ggggbjn.jfif" alt="SNOW WHITE ">
   <p>BMW 325i black:</p>
 <img src="OIP.jvhbhbh.jpg" alt= "African beauty">
-
+<p> BMW 325i blue:</p>
+  <img src="890.jpg" alt= "BLUE SKIES">
+  
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
 </main>
