--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <img src="OIP.jvhbhbh.jpg" alt= "African beauty">
 <p> BMW 325i blue:</p>
   <img src="890.jpg" alt= "BLUE SKIES">
+  <p> BMW 325i red</p>
+  <img src="yes sir.jpg" alt= "SWEET RED SWEET RIDE">
   
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
