--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 <img src="ggggbjn.jfif" alt="SNOW WHITE ">
   <p>BMW 325i black:</p>
 <img src="OIP.jvhbhbh.jpg" alt= "African beauty">
-<p> BMW 325i blue:</p>
-  <img src="890.jpg" alt= "BLUE SKIES">
-  <p> BMW 325i red</p>
-  <img src="yes sir.jpg" alt= "SWEET RED SWEET RIDE">
+<p> BMW 325i red: </p> 
+  <img src="sms.jpg" alt = "KASI FAVORITE">
+  
   
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
