--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <p>BMW 325i black:</p>
 <img src="OIP.jvhbhbh.jpg" alt= "African beauty">
 <p> BMW 325i red: </p> 
-  <img src="sms.jpg" alt = "KASI FAVORITE">
+  <img src="MARA.jpg"= "KASI FAVORITE">
   
   
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
