--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
 
 <main>
 
-<p>This is a simple webpage hosted on GitHub Pages.</p>
+<p> BORN AND RAISED IN SOWETO.</p>
 
 <p>BMW 325i white :</p>
 
 <img src="ggggbjn.jfif" alt="SNOW WHITE ">
+  
   <p>BMW 325i black:</p>
 <img src="OIP.jvhbhbh.jpg" alt= "African beauty">
+  
 <p> BMW 325i red: </p> 
   <img src="MARA.jpg"= "KASI FAVORITE">
+  <p> BMW 325i pink: </p>
   
   
-<p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
+  
+<p> CALL <a href="+26777049745" >GitHub</a> for inquiries .</p>
 
 </main>
 
