--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body background="STOCKOLOKO.jpg">
+<body background="yeas.jpg">
 
 <header>
 
@@ -49,6 +49,6 @@
 
 </footer>
 
-</body background"STOCKOLOKO.jpeg/>
+</body background"yeas.jpg">
 
 </html>
