--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
 <img src="OIP.jvhbhbh.jpg" alt= "African beauty">
   
 <p> BMW 325i red: </p> 
-  <img src="MARA.jpg"= "KASI FAVORITE">
+  <img src="MARA.jpg" alt= "KASI CLASSIC">
+  
   <p> BMW 325i pink: </p>
+  <img src="FRESHYESSS.jpg" alt="FOR THE LADIES">
   
   
   
-<p> CALL <a href="+26777049745" >GitHub</a> for inquiries .</p>
+  
+<p> CALL +26777049745 for inquiries </p>
 
 </main>
 
