--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
 <p> BORN AND RAISED IN SOWETO.</p>
 
-<p>BMW 325i white :</p>
+<p> SNOW WHITE:</p>
 
 <img src="ggggbjn.jfif" alt="SNOW WHITE ">
   
-  <p>BMW 325i black:</p>
+  <p> BLACK BEAUTY:</p>
 <img src="OIP.jvhbhbh.jpg" alt= "African beauty">
   
-<p> BMW 325i red: </p> 
+<p> KASI CLASSIC : </p> 
   <img src="MARA.jpg" alt= "KASI CLASSIC">
   
-  <p> BMW 325i pink: </p>
+  <p> LADIES SEKTION: </p>
   <img src="FRESHYESSS.jpg" alt="FOR THE LADIES">
   
   
@@ -48,7 +48,7 @@
 
 <footer>
 
-<p>&copy; 2025 Derick Tebatso Kgosi Motlhabani</p>
+<p>&copy; 2025 Derick Mo</p>
 
 </footer>
 
