--- a/index.html
+++ b/index.html
@@ -52,6 +52,58 @@
 
 </footer>
 
-</body background"yeas.jpg">
+</body>
+  <!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+<meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>About Me</title>
+
+</head>
+
+<body>
+
+<header>
+
+<h1>About Me</h1>
+
+<nav>
+
+<a href="index.html">Home</a> |
+
+<a href="about.html">About</a> |
+
+<a href="contact.html">Contact</a>
+
+</nav>
+
+</header>
+
+
+<main>
+
+<p>Hi! I'm a car dealership owner .</p>
+
+<p>This our first page check it out cruize in the kasi!</p>
+
+</main>
+
+
+<footer>
+
+<p>&copy; 2025 Derick Motlhabani</p>
+
+</footer>
+
+</body>
+
+</html>
+
 
 </html>
