--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 
 <html lang="en">
 
-<head>
+<head >
 
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>My First GitHub Page</title>
+ <link rel="stylesheet" href="styles_css">
 
 </head>
 
