--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Contact Me</title>
-
+<link rel="stylesheet" href="style_css"
 </head>
 
 <body>
