--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>About Me</title>
-
+  
+<link rel="stylesheet" href="style_css"
 </head>
 
 <body>
