--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
 <title>About Me</title>
   
-<link rel="stylesheet" href="style_css"
+<link rel="stylesheet" href="css_stylings.txt"
 </head>
 
 <body>
