--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>My First GitHub Page</title>
- <link rel="stylesheet" href="css_stylings.txt">
+ <link rel="stylesheet" href="">
 
 </head>
 
-<body background="GOD IS GOOOD.jpg">
+<body background="">
 
 <header>
 
-<h1>GUSHESHE GALORE 325i</h1>
+<h1> 03 BEVERAGES </h1>
 
 </header>
 
 
 <main>
 
-<p> BORN AND RAISED IN SOWETO.</p>
+<p> QUENCH YOUR THIRST </p>
 
 <p> SNOW WHITE:</p>
 
@@ -49,7 +49,7 @@
 
 <footer>
 
-<p>&copy; 2025 Derick Mo</p>
+<p>&copy; 2025 Derick Motlhabani</p>
 
 </footer>
 
