--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>My First GitHub Page</title>
+<title> O3 BEVERAGES </title>
  <link rel="stylesheet" href="">
 
 </head>
 
-<body background="water splash">
+<body background="water splash.jpg">
 
 <header>
 
