--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body background="science-molecular-structures.jpg">
+<body background="BLUE SKIES.jpg">
 
 <header>
 
@@ -26,18 +26,18 @@
 
 <p> QUENCH YOUR THIRST </p>
 
-<p> SNOW WHITE:</p>
+<p> LEMON FLAVOR:</p>
 
-<img src="ggggbjn.jfif" alt="SNOW WHITE ">
+<img src="Sparkling-Lemon-1.png" alt="LEMON FLAVOR ">
   
-  <p> BLACK BEAUTY:</p>
-<img src="OIP.jvhbhbh.jpg" alt= "African beauty">
+  <p> LITCHI FLAVOR:</p>                                                    
+ <img src="Sparkling-Litchi-1.png" alt= "LITCHI FLAVOR">
   
-<p> KASI CLASSIC : </p> 
-  <img src="MARA.jpg" alt= "KASI CLASSIC">
+<p> RASPBERRY FLAVOR : </p> 
+  <img src="Sparkling-Raspberry.png" alt= "RASPBERRY FLAVOR">
   
-  <p> LADIES SEKTION: </p>
-  <img src="FRESHYESSS.jpg" alt="FOR THE LADIES">
+  <p>O3-500ML-SPARKLING.</p>
+  <img src="O3-500ML-SPARKLING.png" alt="SPARKLING FLAVOR">
   
   
   
