--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <img src="Sparkling-Raspberry.png" alt= "RASPBERRY FLAVOR">
   
   <p>O3-500ML-SPARKLING.</p>
-  <img src="O3-500ML-SPARKLING.png" alt="SPARKLING FLAVOR">
+  <img src="O3-500mL-SPARKLING-.png" alt="SPARKLING FLAVOR">
   
   
   
