--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       text-align: center;
       margin-top: 20px;
  }
- /* Navigation bar */
+  <!-- Navigation Bar -->
     nav {
       background-color: black;
       overflow: hidden;
